# adventofcode_2024

./: .gitignore  .gitmodules  CMakeLists.txt  day1.cpp  day1_part2.cpp  day3.cpp  day4.cpp  day7.cpp
.github/workflows/: cmake-single-platform.yml
data/: day1_part2_answer.txt  day2_test.txt  day4_part1_test.txt
include/: Cursor.hpp  Position.hpp  common_headers.hpp
include/utils/: input_parser.hpp  numeric_algorithm.hpp
src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day19.cpp  day1_part2.cpp  day2.cpp  day24.cpp  day25.cpp  day2_part1.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp
src/utils/: input_downloader.cpp
